# language

./: MANIFEST.in  Pipfile  newmasterquestions.json  requirements.txt  setup.cfg  setup.py  test.py
language/: __init__.py  cli.py  connection.py  models.py
language/static/language/: languages.json  test.json
language/static/language/nutrition/: foods.json  warnings.json
