[metadata]
name = riskaverse-language
version = 0.0.1
author = Aaron Parry
author_email = aaron@riskaversehealth.com
description = Small language repo for translating riskaverse text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aparry3/language
project_urls =
    Bug Tracker = https://github.com/aparry3/language/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
